Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In member function 'void Ball::Physics(int*, int*, int)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:191:9: error: expected ',' or ';' before '}' token
         }
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:190:13: warning: unused variable 'W_org' [-Wunused-variable]
         int W_org = W - W/2
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:196:9: error: expected ',' or ';' before '}' token
         }
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:195:13: warning: unused variable 'W_org' [-Wunused-variable]
         int W_org = W/2
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:201:9: error: expected ',' or ';' before '}' token
         }
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:200:13: warning: unused variable 'W_org' [-Wunused-variable]
         int W_org = W
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:203:13: error: 'W_org' was not declared in this scope
     if (x > W_org - r)
             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:236:47: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
      double d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; // гипотенуза
                                               ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:247:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:261:43: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d=0.01;
                                           ^
---------------------------------------------------------------------------------------------
[20.06.2021 15:20:12,25 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
